# java-llama.cpp

./: .gitignore  BATCH_PROCESSING_ANALYSIS.md  BATCH_PROCESSING_FIX_SUMMARY.md  BATCH_PROCESSING_TEST_PLAN.md  CMakeLists.txt  FIX_BATCH_PROCESSING.md  MISSING_FEATURES.md  README.md  STABLE_DIFFUSION_TODO.md  SYSTEM_HARDWARE_INFO.md  TODO.md  UTILITY_CLASSES_REFACTORING_TODO.md  build-native-cuda.sh  latest_git_status.md  latest_git_status.sh  pom.xml
.github/workflows/: release.yaml
config/: utility-configs.json
src/main/cpp/: advanced_sampler_manager.cpp  advanced_sampler_manager.h  ai_sampler_manager.cpp  ai_sampler_manager.h  batch_manager.cpp  batch_manager.h  completion_manager.cpp  completion_manager.h  completion_task.cpp  completion_task.h  de_kherud_llama_LlamaUtils.h  embedding_manager.cpp  embedding_manager.h  grammar_processor.cpp  grammar_processor.h  jllama.cpp  jni_error_handler.cpp  jni_error_handler.h  jni_logger.cpp  jni_logger.h  jni_utils.cpp  jni_utils.h  kv_cache_manager.cpp  kv_cache_manager.h  llama_server.cpp  llama_server.h  lora_adapter_manager.cpp  lora_adapter_manager.h  memory_manager.cpp  memory_manager.h  model_info_manager.cpp  model_info_manager.h  model_loader_manager.cpp  model_loader_manager.h  model_manager.cpp  model_manager.h  pattern_preprocessor.cpp  pattern_preprocessor.h  quantization_manager.cpp  quantization_manager.h  (+23 more)
src/main/java/de/kherud/llama/: AISamplerManager.java  AdvancedSamplerManager.java  AgentCommunicationProtocol.java  BatchOptimizer.java  BatchProcessor.java  ChatTemplateFormatter.java  CliParameters.java  CodeCompletionSampler.java  ConversationManager.java  DeploymentManager.java  EnsembleInferenceEngine.java  FunctionCallSystem.java  GpuDetector.java  InferenceParameters.java  InferencePatterns.java  JsonConstrainedSampler.java  LlamaAsyncService.java  LlamaIterable.java  LlamaLoader.java  LlamaModel.java  LlamaOutput.java  LlamaPromptBuilder.java  LlamaQuantizer.java  LlamaSampler.java  LlamaSystemInfo.java  LlamaSystemMonitor.java  LlamaTokens.java  LlamaTrainer.java  LlamaUtils.java  MemoryOptimizer.java  ModelParameters.java  ModelPool.java  MultiAgentConversationSystem.java  MultiModelManager.java  Pair.java  ProductionMonitor.java  PromptCache.java  ResourceManager.java  SafeBatchProcessor.java  SmartDefaults.java  (+11 more)
src/main/java/de/kherud/llama/args/: NumaStrategy.java
src/main/java/de/kherud/llama/benchmark/: ServerBenchmark.java
src/main/java/de/kherud/llama/converters/: HuggingFaceToGGUFConverter.java  HuggingFaceToGGUFConverterLibrary.java  LegacyConverter.java  LoRAToGGUFConverter.java  LoRAToGGUFConverterLibrary.java
src/main/java/de/kherud/llama/diffusion/: CannyEdgeDetector.java  ImageUpscaler.java  NativeStableDiffusion.java  NativeStableDiffusionWrapper.java  StableDiffusionCppWrapper.java  StableDiffusionResult.java  UpscaleResult.java
src/main/java/de/kherud/llama/examples/: AdvancedSamplingExample.java  ImageProcessorExample.java  MultimodalPipelineExample.java  NativeStableDiffusionExample.java  README.md  SD35MediumExample.java  SamplingExample.java  SimpleStableDiffusionTest.java  StableDiffusionExample.java  TextToVisualConverterExample.java  VisionLanguageExample.java
src/main/java/de/kherud/llama/generation/: TextToVisualConverter.java  TextToVisualConverterTypes.java
src/main/java/de/kherud/llama/gguf/: GGUFConstants.java  GGUFHasher.java  GGUFHasherLibrary.java  GGUFInspector.java  GGUFInspectorLibrary.java  GGUFMetadataEditor.java  GGUFMetadataEditorLibrary.java  GGUFReader.java  GGUFValue.java  GGUFWriter.java  TensorInfo.java
src/main/java/de/kherud/llama/huggingface/: HuggingFaceDownloader.java  HuggingFaceDownloaderLibrary.java  HuggingFaceModelConverter.java
src/main/java/de/kherud/llama/multimodal/: ImageProcessor.java  ImageProcessorLibrary.java  VisionLanguageModel.java  VisionLanguageModelLibrary.java
src/main/java/de/kherud/llama/performance/: PerformanceOptimizer.java
src/main/java/de/kherud/llama/test/: UtilityFunctionsTest.java
src/main/java/de/kherud/llama/testing/: ServerEmbeddingClient.java  ServerEmbeddingHttpClient.java  ServerEmbeddingHttpClientLibrary.java  ServerTestFramework.java  ServerTestFrameworkLibrary.java  TokenizerBenchmark.java  TokenizerComparator.java  TokenizerTester.java
src/main/java/de/kherud/llama/tools/: DevelopmentUtils.java  LlamaDevelopmentUtils.java  LlamaDevelopmentUtilsLibrary.java  ProjectBuilder.java  ProjectBuilderLibrary.java
src/main/java/de/kherud/llama/training/: DatasetProcessor.java  LoRATrainer.java  LoRATrainerLibrary.java  LoRATrainingExample.java  (+1 more)
src/test/java/de/kherud/llama/: AISamplerManagerTest.java  AdvancedSamplingEcosystemTest.java  AdvancedSamplingTest.java  AgentCommunicationProtocolTest.java  BackendManagementTest.java  BatchOptimizationTest.java  BatchOptimizerTest.java  BatchProcessorTest.java  CancellationExample.java  CancellationTest.java  ConversationManagerTest.java  DebugBasicTest.java  DebugSequenceTest.java  EmbeddingCompatibilityTest.java  EmbeddingTest.java  ErrorHandlingTest.java  FunctionCallSystemTest.java  GGUFCompatibilityTest.java  GGUFReaderTest.java  GpuOffloadingTest.java  InferencePatternsTest.java  IntelligentDefaultsTest.java  LlamaModelTest.java  LlamaQuantizerTest.java  LlamaSystemInfoTest.java  LlamaSystemMonitorTest.java  LlamaTrainerTest.java  LoRAAdapterIntegrationTest.java  LoRAAdapterTest.java  LoRAAdapterUnitTest.java  MemoryAnalysisTest.java  MemoryKVCacheTest.java  MemoryLeakEmbeddingTest.java  MemoryLeakTest.java  MemoryOptimizerTest.java  ModelInformationTest.java  MultiAgentConversationSystemTest.java  MultiModelSystemTest.java  ProductionMonitorTest.java  QuantizationBasicTest.java  (+22 more)
src/test/resources/datasets/: training_sample.txt
wiki/: cultural-connections.md  riddles-and-easter-eggs.md
wiki/api/: conversion-api.md  training-api.md
wiki/benchmarking/: server-benchmark.md
wiki/constrained-generation/: README.md
wiki/converters/: README.md
wiki/gguf-format/: README.md
wiki/lora-training/: README.md  forward-pass.md  training-pipeline.md
(+21 files in other folders)
